# Cplus_basic

./: CMakeLists.txt
practice/: CMakeLists.txt  test00.cpp  test01.cpp  test02.cpp  test03.cpp  test04.cpp
task01/: CMakeLists.txt  main1.cpp
task02/: CMakeLists.txt
task03/: CMakeLists.txt  main3.cpp
task04/: CMakeLists.txt  main4.cpp
task05/: CMakeLists.txt  main.cpp
task06/: CMakeLists.txt  main.cpp
task07/: CMakeLists.txt  main.cpp
task08/: CMakeLists.txt  main.cpp
task09/: CMakeLists.txt  main.cpp
task10/: CMakeLists.txt  main.cpp
task2/: CMakeLists.txt  main.cpp  main2.cpp
